--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
-[package]
-name = "r2"
-version = "0.1.0"
-edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[workspace]
+members = [
+	"r2utils",
+	"r2idl",
+	"rmw",
+	"rcl",
+]
